RESOLVED FIXED43562
[Qt] Temporary files should not be created in the current directory
https://bugs.webkit.org/show_bug.cgi?id=43562
Summary [Qt] Temporary files should not be created in the current directory
Simon Hausmann
Reported 2010-08-05 08:31:53 PDT
Currently the way FileSystemQt.cpp creates temporary files makes them end up in the current directory. We should be using the dedicated temporary directory on the system instead.
Attachments
Patch (1.56 KB, patch)
2010-08-05 08:37 PDT, Simon Hausmann
no flags
Simon Hausmann
Comment 1 2010-08-05 08:36:23 PDT
The use of the current directory creates problems on Symbian (with different drives, etc.) and in general the system temporary directory is the better place, as it may be subject to cleanup (gc on system startup) and it has better permissions in place.
Simon Hausmann
Comment 2 2010-08-05 08:37:13 PDT
Laszlo Gombos
Comment 3 2010-08-05 08:50:26 PDT
Comment on attachment 63596 [details] Patch looks good to me, r+.
WebKit Commit Bot
Comment 4 2010-08-05 22:09:00 PDT
Comment on attachment 63596 [details] Patch Clearing flags on attachment: 63596 Committed r64816: <http://trac.webkit.org/changeset/64816>
WebKit Commit Bot
Comment 5 2010-08-05 22:09:05 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6 2010-08-10 06:39:45 PDT
Revision r64816 cherry-picked into qtwebkit-2.1 with commit 195b286c999effb1c2e675ce35c3936c5cea946d
Note You need to log in before you can comment on or make changes to this bug.