2010-08-05  Simon Hausmann  <simon.hausmann@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Temporary files should not be created in the current directory
        https://bugs.webkit.org/show_bug.cgi?id=43562

        Don't create temporary files in the current directory, use QDir::tempPath()
        instead, as suggested by the QTemporaryFile documentation.

        * platform/qt/FileSystemQt.cpp:
        (WebCore::openTemporaryFile):

Canonical link: https://commits.webkit.org/55632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64816 268f45cc-cd09-0410-ab3c-d52691b4dbfc